--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   user-backend:
     build:
       context: ./user-backend
+    command: bash -c "rm -f tmp/pids/server.pid && rails server -b 0.0.0.0"
     ports:
       - "3000:3000"
     volumes:
@@ -13,6 +14,7 @@ services:
   messaging-backend:
     build:
       context: ./messaging-backend
+    command: bash -c "rm -f tmp/pids/server.pid && rails server -b 0.0.0.0"
     ports:
       - "3001:3000"
     volumes:
